--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             display: flex;
             align-items: center;
             background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), 
-                        url('https://images.unsplash.com/photo-1607619056574-7b8d3ee536b2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') no-repeat center center/cover;
+                        url('https://github.com/Sumayyaaaa/lume-website/blob/main/cozy-spring-still-life-with-candles-knitted-element-book-flowers.jpg') no-repeat center center/cover;
             color: white;
             padding-top: 80px;
         }
