--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                     <div class="product-info">
                         <h3 class="product-title">Lavender Dreams</h3>
                         <div class="product-category">Calming</div>
-                        <div class="product-price">₹1,299</div>
+                        <div class="product-price">₹399</div>
                         <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
@@ -614,7 +614,7 @@
                     <div class="product-info">
                         <h3 class="product-title">Ocean Breeze</h3>
                         <div class="product-category">Refreshing</div>
-                        <div class="product-price">₹1,499</div>
+                        <div class="product-price">₹299</div>
                         <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
@@ -627,7 +627,7 @@
                     <div class="product-info">
                         <h3 class="product-title">Vanilla Comfort</h3>
                         <div class="product-category">Warming</div>
-                        <div class="product-price">₹1,199</div>
+                        <div class="product-price">299</div>
                         <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
@@ -640,7 +640,7 @@
                     <div class="product-info">
                         <h3 class="product-title">Citrus Sunrise</h3>
                         <div class="product-category">Energizing</div>
-                        <div class="product-price">₹1,099</div>
+                        <div class="product-price">₹299</div>
                         <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
@@ -682,8 +682,8 @@
                 <div class="footer-column">
                     <h3>Contact Us</h3>
                     <ul class="footer-links">
-                        <li><i class="fas fa-map-marker-alt" style="margin-right: 8px;"></i> 123 Fragrance Lane, Chennai</li>
-                        <li><i class="fas fa-phone" style="margin-right: 8px;"></i> +91 9876543210</li>
+                        <li><i class="fas fa-map-marker-alt" style="margin-right: 8px;"></i> BSACIST, Vandalur, Chennai</li>
+                        <li><i class="fas fa-phone" style="margin-right: 8px;"></i> +91 8610491678</li>
                         <li><i class="fas fa-envelope" style="margin-right: 8px;"></i> hello@lumecandles.com</li>
                     </ul>
                 </div>
