--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             display: flex;
             align-items: center;
             background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), 
-                        url('https://raw.githubusercontent.com/Sumayyaaaa/lume-website/main/cozy-spring-still-life-with-candles-knitted-element-book-flowers.jpg') no-repeat center center/cover;
+                        url('images/background.jpg') no-repeat center center/cover;
             color: white;
             padding-top: 80px;
         }
